--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>My Love,</h1>
-    <p id="confession">I just wanted to take a moment to tell you how much I love you. You light up my life and bring joy to every moment we share together. I am so grateful to have you in my life and I promise to always cherish and love you with all my heart. Forever and always, Yours.</p>
+    <h1>Hé lu Bé Byyyyyyy,</h1>
+    <p id="confession">Gửi tới Bé By lời yêu thưn nhứt từ Ba nhaaaaaa. Ba muốn nói là Ba yêu By nhìu nhấtttt, thương nhấtttt trên trần đời này lun á. Mong rằng Valentine này của 2 đứa mình sẽ thiệttttt đẹp, thiệttttt hạnh phúc nhoa 😘😘</p>
     <div class="image-slider">
       <img src="https://img.freepik.com/free-photo/vivid-blurred-colorful-background_58702-2545.jpg" alt="Image 1">
       <img src="https://t4.ftcdn.net/jpg/01/97/92/77/360_F_197927767_MISwwnukYrfEH7BoyWazNXLS2p32Plcb.jpg" alt="Image 2">
