--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
     <h1>Hé lu Bé Byyyyyyy,</h1>
     <p id="confession">Gửi tới Bé By lời yêu thưn nhứt từ Ba nhaaaaaa. Ba muốn nói là Ba yêu By nhìu nhấtttt, thương nhấtttt trên trần đời này lun á. Mong rằng Valentine này của 2 đứa mình sẽ thiệttttt đẹp, thiệttttt hạnh phúc nhoa 😘😘</p>
     <div class="image-slider">
-      <img src="https://img.freepik.com/free-photo/vivid-blurred-colorful-background_58702-2545.jpg" alt="Image 1">
-      <img src="https://t4.ftcdn.net/jpg/01/97/92/77/360_F_197927767_MISwwnukYrfEH7BoyWazNXLS2p32Plcb.jpg" alt="Image 2">
-      <img src="https://img.freepik.com/free-vector/watercolor-stains-abstract-background_23-2149107181.jpg" alt="Image 3">
+      <img src="1.jpg" alt="Image 1">
+      <img src="2.jpg" alt="Image 2">
+      <img src="3.jpg" alt="Image 3">
     </div>
   </div>
   <script src="app.js"></script>
